Implemented slick slider and as well as creating the last section, to get that done first.

--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
 <head>
 	<title>Pacific Origin Solutions</title>
+
+	<link rel="stylesheet" type="text/css" href="lib/slick/slick.css"/>
+	<link rel="stylesheet" type="text/css" href="lib/slick/slick-theme.css"/>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
@@ -91,6 +94,53 @@
 				</div>
 
 			</div>
+		</section>
+
+		<section class="testimonials white-section container-fluid">
+			<div class="section-header white-section__header">
+				<div class="section-intro">Testimonials</div>
+				<div class="gradientTitle">Clients Love Working With Us</div>
+			</div>
+
+			<div class="testimonials__main-content">
+				<div class="video">
+					<iframe src="https://player.vimeo.com/video/7809605" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+				</div>
+				
+				<div class="testimonials-slider">
+					<div>
+						<svg class="icon icon-Technology_Assessment_icon"><use xlink:href="#icon-Technology_Assessment_icon"></use></svg>
+						<span class="name">Rafael Alenda</span>
+						<span class="title">CEO, ABCD Company</span>
+					</div>
+					<div>
+						<svg class="icon icon-Technology_Assessment_icon"><use xlink:href="#icon-Technology_Assessment_icon"></use></svg>
+						<span class="name">Lyla Mclnerney</span>
+						<span class="title">CEO, ABCD Company</span>
+					</div>
+					<div>
+						<svg class="icon icon-Technology_Assessment_icon"><use xlink:href="#icon-Technology_Assessment_icon"></use></svg>
+						<span class="name">Eric Ries</span>
+						<span class="title">CEO, ABCD Company</span>
+					</div>
+					<div>
+						<svg class="icon icon-Technology_Assessment_icon"><use xlink:href="#icon-Technology_Assessment_icon"></use></svg>
+						<span class="name">Rafael Alenda</span>
+						<span class="title">CEO, ABCD Company</span>
+					</div>
+					<div>
+						<svg class="icon icon-Technology_Assessment_icon"><use xlink:href="#icon-Technology_Assessment_icon"></use></svg>
+						<span class="name">Lyla Mclnerney</span>
+						<span class="title">CEO, ABCD Company</span>
+					</div>
+					<div>
+						<svg class="icon icon-Technology_Assessment_icon"><use xlink:href="#icon-Technology_Assessment_icon"></use></svg>
+						<span class="name">Eric Ries</span>
+						<span class="title">CEO, ABCD Company</span>
+					</div>
+				</div>
+			</div>
+
 		</section>
 
 	</div>
@@ -281,6 +331,7 @@
 
 <script src="js/lib/jquery-1.11.3.min.js"></script>
 <script src="js/lib/stickyheader.js"></script> 
+<script src="js/lib/slick.min.js"></script>
 <script src="js/global.js"></script> 
 
 </html>
