Finish slider, and responsive settings for it in js, working now in responsivness of page

--- a/index.html
+++ b/index.html
@@ -3,8 +3,6 @@
 <head>
 	<title>Pacific Origin Solutions</title>
 
-	<link rel="stylesheet" type="text/css" href="lib/slick/slick.css"/>
-	<link rel="stylesheet" type="text/css" href="lib/slick/slick-theme.css"/>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
@@ -108,33 +106,34 @@
 				</div>
 				
 				<div class="testimonials-slider">
-					<div>
-						<svg class="icon icon-Technology_Assessment_icon"><use xlink:href="#icon-Technology_Assessment_icon"></use></svg>
+					<div class="ts-items">
+						<img src="images/homepage/persona1.png" alt="">
 						<span class="name">Rafael Alenda</span>
 						<span class="title">CEO, ABCD Company</span>
 					</div>
-					<div>
-						<svg class="icon icon-Technology_Assessment_icon"><use xlink:href="#icon-Technology_Assessment_icon"></use></svg>
+					<div class="ts-items">
+						<img src="images/homepage/persona2.png" alt="">
 						<span class="name">Lyla Mclnerney</span>
 						<span class="title">CEO, ABCD Company</span>
 					</div>
-					<div>
-						<svg class="icon icon-Technology_Assessment_icon"><use xlink:href="#icon-Technology_Assessment_icon"></use></svg>
+					<div class="ts-items">
+						<img src="images/homepage/persona1.png" alt="">
 						<span class="name">Eric Ries</span>
 						<span class="title">CEO, ABCD Company</span>
 					</div>
-					<div>
-						<svg class="icon icon-Technology_Assessment_icon"><use xlink:href="#icon-Technology_Assessment_icon"></use></svg>
+
+					<div class="ts-items">
+						<img src="images/homepage/persona1.png" alt="">
 						<span class="name">Rafael Alenda</span>
 						<span class="title">CEO, ABCD Company</span>
 					</div>
-					<div>
-						<svg class="icon icon-Technology_Assessment_icon"><use xlink:href="#icon-Technology_Assessment_icon"></use></svg>
+					<div class="ts-items">
+						<img src="images/homepage/persona2.png" alt="">
 						<span class="name">Lyla Mclnerney</span>
 						<span class="title">CEO, ABCD Company</span>
 					</div>
-					<div>
-						<svg class="icon icon-Technology_Assessment_icon"><use xlink:href="#icon-Technology_Assessment_icon"></use></svg>
+					<div class="ts-items">
+						<img src="images/homepage/persona1.png" alt="">
 						<span class="name">Eric Ries</span>
 						<span class="title">CEO, ABCD Company</span>
 					</div>
