responsivnes for tablet done for visible sections, working on header

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 
 	<header class="header">
-		<div class="nav-container container-fluid">
+		<div class="nav-container">
 			<div class="logo">
 				<a href="#">
 				<img src="images/icons/pos-logo.svg" alt="logo">
@@ -63,7 +63,7 @@
 						<div class="inline-items__title">Regulatory Compliance</div>
 						<div class="inline-items__content">
 							We work diligently to ensure all required FDA and other regulatory paperwork are filled out properly and that products being submitted for approval are compliant with FDA guidelines.
-							<a href="#" class="inline-items__link main-generic-link">Learn More</a>
+							<a href="#" class="main-generic-link">Learn More</a>
 						</div>
 					</li>
 					<li>
@@ -71,7 +71,7 @@
 						<div class="inline-items__title">Market Research</div>
 						<div class="inline-items__content">
 							We work diligently to ensure all required FDA and other regulatory paperwork are filled out properly and that products being submitted for approval are compliant with FDA guidelines.
-							<a href="#" class="inline-items__link main-generic-link">Learn More</a>
+							<a href="#" class="main-generic-link">Learn More</a>
 						</div>
 					</li>
 					<li>
@@ -79,7 +79,7 @@
 						<div class="inline-items__title">Technology Assessment</div>
 						<div class="inline-items__content">
 							We work diligently to ensure all required FDA and other regulatory paperwork are filled out properly and that products being submitted for approval are compliant with FDA guidelines.
-							<a href="#" class="inline-items__link main-generic-link">Learn More</a>
+							<a href="#" class="main-generic-link">Learn More</a>
 						</div>
 					</li>
 				</ul>
