Quick fix for footer, added icon and remove desktop nav for mobile breakpoint

--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
 					<a href="#">About</a>
 				</li>
 			</ul>
+			<div class="mobile-menu">
+				<a href="#">
+					Menu <svg class="icon icon-menu"><use xlink:href="#icon-menu"></use></svg>
+				</a>
+			</div>
 		</div>
 	</header>
 
@@ -146,10 +151,6 @@
 
 	<footer>
 		<div class="footer-container container-fluid">
-			<div class="footer-logo">
-				<img src="images/icons/pos-logo.svg" alt="logo">
-				<p>Pacific Origin Solutions Inc.  U.S.A.  &copy; 2015</p>
-			</div>
 			<ul class="footer-nav">
 				<li class="footer-nav__listItem">
 					<a href="#">Services</a>
@@ -161,6 +162,10 @@
 					<a href="#">About</a>
 				</li>
 			</ul>
+			<div class="footer-logo">
+				<img src="images/icons/pos-logo.svg" alt="logo">
+				<p>Pacific Origin Solutions Inc.  U.S.A.  &copy; 2015</p>
+			</div>
 		</div>
 	</footer>
 </body>
