Responsive nav full stlye complete, also added better usability in window scroll. Testimonails carousel issues fiex, and full responsive stlyes complete

--- a/index.html
+++ b/index.html
@@ -9,6 +9,24 @@
 
 	<header class="header">
 		<div class="nav-container">
+
+			<div id="nav-collapse">
+				<ul class="main-nav">
+					<li class="main-nav__listItem">
+						<a href="#" class="active">Expertise</a>
+					</li>
+					<li class="main-nav__listItem">
+						<a href="#">Services</a>
+					</li>
+					<li class="main-nav__listItem">
+						<a href="#">Contact</a>
+					</li>
+					<li class="main-nav__listItem">
+						<a href="#">About</a>
+					</li>
+				</ul>
+			</div>
+
 			<div class="logo">
 				<a href="#">
 				<img src="images/icons/pos-logo.svg" alt="logo">
@@ -107,7 +125,7 @@
 
 			<div class="testimonials__main-content">
 				<div class="video">
-					<iframe src="https://player.vimeo.com/video/7809605" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+					<iframe id="video" src="https://player.vimeo.com/video/7809605" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 				</div>
 				
 				<div class="testimonials-slider">
@@ -334,7 +352,8 @@
 
 
 <script src="js/lib/jquery-1.11.3.min.js"></script>
-<script src="js/lib/stickyheader.js"></script> 
+<script src="js/lib/stickyheader.js"></script>
+<script src="js/lib/responsive-nav.min.js"></script>  
 <script src="js/lib/slick.min.js"></script>
 <script src="js/global.js"></script> 
 
