Expertise block markup and base css done

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 			</div>
 		</section>
 
-		<section class="services white-section container-fluid">
+		<section class="services white-section">
 			<div class="section-header white-section__header">
 				<div class="section-intro"><strong>Services</strong> &#x25cf; What we do</div>
 				<div class="gradientTitle">Improving The Science Behind Your Business</div>
@@ -107,11 +107,71 @@
 					</li>
 				</ul>
 
-				<div class="lastInfo">
+				<div class="quote">
 					<span>
 						<strong>Pacific Origin Solutions</strong> consulting services give your clinics and laboratories competitive advantage in a rapidly expanding biotech industry.
 					</span>
 					<button class="btn btn--simple btn--blue">View All services</button>
+				</div>
+
+			</div>
+		</section>
+
+		<section class="expertise white-section">
+
+			<div class="section-side-bar">
+				<img src="images/homepage/doctor.jpg" alt="Doctor">
+			</div>
+			
+			<div class="section-side-left">
+				<div class="section-header white-section__header left-section">
+					<div class="section-intro section-intro--no-decoration"><strong>Expertise</strong> &#x25cf; Why Choose Us</div>
+					<div class="gradientTitle">Delivering the Answers You Need</div>
+				</div>
+
+				<div class="inline-items">
+					<div class="col-left">
+						<p>
+							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+							consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+							cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+							proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+						</p>
+						<p>
+							<strong>Lorem ipsum dolor sit amet</strong>, consectetur adipisicing elit, sed do eiusmod
+							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+							consequat.
+						</p>
+						<p>
+							<strong>We provide the research behind the science to help you succeed.</strong>
+						</p>
+						<div class="quote">
+							<svg class="icon icon-tips"><use xlink:href="#icon-tips"></use></svg>
+							<span>Sign up for weekly industry insights and expert research tips</span>
+							<div class="btn-container">
+								<button class="btn btn--simple btn--blue">Sign Up for Tips</button>
+							</div>
+						</div>
+					</div>
+					<div class="col-right">
+						<ul>
+							<li>
+								<h6 class="item-title">Chemical Biology</h6>
+								<p class="item-info">Our clinical research provides detailed market and end-user product analyses and financial planning to help medical device and testing kit developers and manufacturers deliver products that achieve maximum performance within hospital, clinical, and reference laboratories.</p>
+							</li>
+							<li>
+								<h6 class="item-title">Clinical Forensics</h6>
+								<p class="item-info">Developers and manufacturers deliver products that achieve maximum performance within hospital, clinical, and reference laboratories.</p>
+							</li>
+							<li>
+								<h6 class="item-title">Certifications</h6>
+								<p class="item-info">Our clinical research provides detailed market and end-user product analyses and financial planning to help medical device and testing kit developers and manufacturers deliver products that achieve maximum performance within hospital, clinical, and reference laboratories.</p>
+							</li>
+						</ul>
+					</div>
 				</div>
 
 			</div>
