About page markup and css base css done

--- a/index.html
+++ b/index.html
@@ -69,13 +69,13 @@
 			</div>
 		</section>
 
-		<section class="services white-section">
+		<section class="services white-section center-section">
 			<div class="section-header white-section__header">
 				<div class="section-intro"><strong>Services</strong> &#x25cf; What we do</div>
 				<div class="gradientTitle">Improving The Science Behind Your Business</div>
 			</div>
 
-			<div class="services__main-content">
+			<div class="services__main-content center-section__main-content">
 				<p class="main-intro">
 					Pacific Origin Solutions provides extensive market research capabilities to enhance and improve <br> the science that makes your products desirable and your business successful. 
 				</p>
@@ -173,6 +173,66 @@
 						</ul>
 					</div>
 				</div>
+
+			</div>
+		</section>
+		
+		<section class="about white-section center-section">
+			<div class="section-header white-section__header">
+				<div class="section-intro"><strong>About</strong> &#x25cf; Who We are</div>
+				<div class="gradientTitle">Setting the Stage for Success</div>
+			</div>
+
+			<div class="about__main-content center-section__main-content">
+				<p class="main-intro">
+					Pacific Origin Solutions provides the strategic leadership needed to develop and deliver optimized market research and the tactical knowhow to successfully implement the vision. 
+				</p>
+				
+				<div class="team-member">
+					<img src="images/homepage/persona3.png" alt="Mimi Kothari">
+					<div class="team-member__info">
+						<span class="name-position">Meet Mimi Kothari <br> Lead Biotech Research Consultant + Owner</span>
+						<a href="#">View Complete Profile</a>
+					</div>
+				</div>
+
+				<button class="btn btn--simple btn--blue">Learn More About Us</button>
+
+				<ul class="inline-items">
+					<li>
+						<div class="newsbyte-area">
+							<svg class="icon icon-newsbyte"><use xlink:href="#icon-newsbyte"></use></svg>
+							<p>NewsByte</p>
+						</div>
+						<div class="inline-items__title">Fierce Biotech</div>
+						<div class="inline-items__content">
+							Monitors biotech and pharmaceutical deals, FDA decisions, clinical trials, and more.
+							<a href="#" class="main-generic-link">Read More</a>
+						</div>
+					</li>
+					<li>
+						<div class="newsbyte-area">
+							<svg class="icon icon-newsbyte"><use xlink:href="#icon-newsbyte"></use></svg>
+							<p>NewsByte</p>
+						</div>
+						<div class="inline-items__title">Science Direct</div>
+						<div class="inline-items__content">
+							The worlds leading full-text scientific database offering articles and chapters from nearly 2,500 journals and 26,000 books.
+							<a href="#" class="main-generic-link">Read More</a>
+						</div>
+					</li>
+					<li>
+						<div class="newsbyte-area">
+							<svg class="icon icon-newsbyte"><use xlink:href="#icon-newsbyte"></use></svg>
+							<p>NewsByte</p>
+						</div>
+						<div class="inline-items__title">ScienceDaily</div>
+						<div class="inline-items__content">
+							Provides the latest science news, with hourly updated newsfeeds.
+							<a href="#" class="main-generic-link">Read More</a>
+						</div>
+					</li>
+				</ul>
 
 			</div>
 		</section>
