TIPs sections started markup

--- a/index.html
+++ b/index.html
@@ -237,6 +237,20 @@
 			</div>
 		</section>
 
+		<section class="about white-section center-section">
+			<div class="section-header white-section__header">
+				<svg class="icon icon-tips"><use xlink:href="#icon-tips"></use></svg>
+				<div class="gradientTitle">Sign Up for Free Tips</div>
+			</div>
+
+			<div class="about__main-content center-section__main-content">
+				<p class="main-intro">
+					Pacific Origin Solutions Lorem ipsem dolar molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros.
+				</p>
+			</div>
+
+		</section>
+
 		<section class="testimonials white-section container-fluid">
 			<div class="section-header white-section__header">
 				<div class="section-intro">Testimonials</div>
