sign up section markup and css done

--- a/index.html
+++ b/index.html
@@ -237,18 +237,29 @@
 			</div>
 		</section>
 
-		<section class="about white-section center-section">
-			<div class="section-header white-section__header">
+		<section class="sign-up violet-section center-section">
+			<div class="section-header violet-section__header">
 				<svg class="icon icon-tips"><use xlink:href="#icon-tips"></use></svg>
 				<div class="gradientTitle">Sign Up for Free Tips</div>
 			</div>
 
-			<div class="about__main-content center-section__main-content">
+			<div class="sign-up__main-content center-section__main-content">
 				<p class="main-intro">
 					Pacific Origin Solutions Lorem ipsem dolar molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros.
 				</p>
-			</div>
 
+				<form class="sign-up__form">
+				  <input type="text" name="name" placeholder="Your Name">
+				  <input type="text" name="email" placeholder="Your Email Address">
+
+				  <input class="btn btn--simple btn--teal" type="submit" value="Subscribe for Free">
+				</form>
+
+				<div class="promise"> 
+					We promise to never spam you.
+				</div>
+			</div>
+			
 		</section>
 
 		<section class="testimonials white-section container-fluid">
